--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -121,6 +121,8 @@ $transition-time: 0.1s;
   height: 60px;
   width: 100%;
   position: fixed;
+  top: 0px;
+  left: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
