--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -81,7 +81,7 @@
 }
 
 .base-container {
-  min-height: 100%;
+  min-height: 100vh;
   width: 100%;
   -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
           box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -104,9 +104,9 @@
 .app-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   min-width: 1360px;
-  // min-height: 950px;
+//   min-height: 950px;
   padding-top: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -115,9 +115,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: flex-start;
+      -ms-flex-pack: flex-start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -125,6 +125,12 @@
   font-family: 'Open Sans', sans-serif;
   // background: white;
   background: #E9EBEE;
+}
+
+_::-webkit-full-page-media, _:future, :root .safari_only {
+ .app-container {
+     padding-top: 200px;
+ }
 }
 
 .hidden {
