--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -143,7 +143,8 @@
 // }
 
 .signup-container {
-  height: 100%;
+  min-height: 950px;
+  // height: 100%;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
