--- a/app/assets/stylesheets/components/navbar/hamburger.scss
+++ b/app/assets/stylesheets/components/navbar/hamburger.scss
@@ -70,6 +70,7 @@ $drk-text: #CDCDCD;
   height: 20px;
   position: absolute;
   left: 25px;
+  top: 20px;
   margin: 50px auto;
   -webkit-transform: rotate(0deg);
       -ms-transform: rotate(0deg);
