--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -104,7 +104,8 @@
 .app-container {
   position: relative;
   width: 100%;
-  min-height: 100%;
+//   min-height: 100%;
+  min-height: 100vh;
   min-width: 1360px;
 //   min-height: 950px;
   padding-top: 60px;
