--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -180,7 +180,7 @@
 }
 
 .splash-mid {
-  height: 327px;
+  height: 500px;
   width: 100%;
   padding: 40px 0px;
   display: -webkit-box;
@@ -190,45 +190,40 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+//   -ms-flex-pack: distribute;
+//       justify-content: space-around;
+-webkit-box-pack: center;
+-ms-flex-pack: center;
+        justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: $drk-primary;
+//   background: $drk-primary;
+    background: url(http://i.huffpost.com/gen/2312972/images/o-ODELL-facebook.jpg);
+    background-size: 100%;
+    background-repeat: no-repeat;
 
-  h1 {
-    font-size: 30px;
-    color: white;
-    font-weight: bold;
-  }
 
-  p {
-    text-align: center;
-    font-size: 20px;
-    line-height: 45px;
-    color: white;
-  }
+  .splash-mid-content {
 
-  .splash-mid-carousel {
-    padding: 20px 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-
-    div[class^='logo-'] {
-      margin: 0px 10px;
-      height: 90px;
-      width: 80px;
-      border: none;
-      border-radius: 25%;
+    h1 {
+        font-size: 30px;
+        color: white;
+        font-weight: bold;
+        margin-bottom: 75px;
+        // text-align: left;
     }
+
+    p {
+        margin-left: 35%;
+        text-align: right;
+        font-size: 20px;
+        line-height: 45px;
+        color: white;
+        font-weight: bold;
+    }
+
+    
   }
 }
 
@@ -262,6 +257,26 @@
     font-size: 20px;
     line-height: 45px;
   }
+  .splash-mid-carousel {
+    padding: 20px 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+
+    div[class^='logo-'] {
+    margin: 0px 10px;
+    height: 90px;
+    width: 80px;
+    border: none;
+    border-radius: 25%;
+    }
+}
 }
 
 .splash-teaser {
