--- a/app/assets/stylesheets/components/console/_.scss
+++ b/app/assets/stylesheets/components/console/_.scss
@@ -75,6 +75,7 @@
 .console-container {
   display: -webkit-box;
   display: -ms-flexbox;
+  margin: auto;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
