--- a/app/assets/stylesheets/components/home/create_pool_form.scss
+++ b/app/assets/stylesheets/components/home/create_pool_form.scss
@@ -85,7 +85,8 @@
 // }
 
 .pool-form-container {
-  height: 850px;
+  // height: 850px;
+  margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
