more auto margins

--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -143,8 +143,9 @@
 // }
 
 .signup-container {
-  min-height: 950px;
+  // min-height: 950px;
   // height: 100%;
+  margin: auto;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
