--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -141,8 +141,9 @@
 }
 
 .splash-top {
-  height: 327px;
+//   height: 327px;
   width: 100%;
+  padding: 40px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -167,7 +168,6 @@
 
   h1 {
     font-size: 40px;
-    opacity: 1;
     margin-bottom: 25px;
     font-weight: bold;
   }
@@ -249,11 +249,14 @@
   // box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   h1 {
+    width: 870px;
     font-size: 30px;
     margin-bottom: 25px;
     font-weight: bold;
+    text-align: center;
   }
   p {
+    width: 870px;
     text-align: center;
     font-size: 20px;
     line-height: 35px;
@@ -304,6 +307,7 @@
     font-size: 30px;
     margin-bottom: 25px;
     font-weight: bold;
+    text-align: center;
   }
   p {
     text-align: center;
