--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -164,7 +164,7 @@
 //   }
 // }
 
-@media screen and (max-width : 769px) {
+@media screen and (max-device-width : 769px) {
   
     .base-wrapper {
       padding-left: 0px;
