--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -176,23 +176,30 @@
       background: #E9EBEE;
     }
     .app-container {
-      // width: 100%;
-      // min-width: none;
-      // min-height: initial;
-      // -webkit-box-pack: start;
-      //     -ms-flex-pack: start;
-      //         justify-content: flex-start;
+      padding-top: 100px;
     }
     // navbar
     .navbar-container {
-      width: 100%;
+      height: 100px;
+      .title {
+        font-size: 30px;
+      }
+      .account-button {
+        font-size: 30px;
+      }
+      #left-dropdown-button {
+        top: 40px;
+      }
+      .navbar-dropdown {
+        top: 100px;
+        width: auto;
+        padding: 20px 10px;
+      }
+      .navbar-dropdown-list {
+        font-size: 30px;
+      }
     }
     // splash
-    // .splash-container {
-    //   -webkit-box-pack: start;
-    //       -ms-flex-pack: start;
-    //           justify-content: flex-start;
-    // }
     .splash-container {
       
     }
