--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -52,7 +52,7 @@
 .modboard-box {
   width: 870px;
   padding: 0px 5px;
-  padding-top: 30px;
+  padding-top: 40px;
   position: relative;
   background: $drk-primary;
   color: white;
@@ -69,7 +69,7 @@
   .modboard-container {
     width: 100%;
     // height: 267px;
-    padding: 10px 0px;
+    // padding: 10px 0px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
