--- a/app/assets/stylesheets/components/home/profile_box.scss
+++ b/app/assets/stylesheets/components/home/profile_box.scss
@@ -61,7 +61,7 @@
 
 .profile-box { 
   width: 289px;
-  height: 225px;
+  // height: 225px;
   position: relative;
   padding-top: 40px;
   display: -webkit-box;
