splash mid text align

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -212,17 +212,18 @@
 
 
   .splash-mid-content {
+    width: 870px;
 
     h1 {
         font-size: 30px;
         color: white;
         font-weight: bold;
         margin-bottom: 75px;
-        // text-align: left;
+        text-align: right;
     }
 
     p {
-        margin-left: 35%;
+        // margin-left: 35%;
         text-align: right;
         font-size: 25px;
         line-height: 45px;
