--- a/app/assets/stylesheets/base/websponsive.scss
+++ b/app/assets/stylesheets/base/websponsive.scss
@@ -200,37 +200,41 @@
       }
     }
     // splash
-    .splash-container {
-      
-    }
     .splash-top {
+      padding-right: 20px;
+      padding-left: 20px;
       h1 {
        font-size: 30px;
       }
       p {
         font-size: 20px;
+        width: initial;
       }
     }
-    // .splash-mid {
-    //   h1 {
-        
-    //   }
-    // }
-    // .splash-bottom {
-
-    // }
-    // .splash-teaser {
-    //   h1 {
-    //     font-size: 30px;
-    //     margin-bottom: 25px;
-    //     font-weight: bold;
-    //   }
-    //   p {
-    //     text-align: center;
-    //     font-size: 20px;
-    //     line-height: 35px;
-    //   }
-    // }
+    .splash-mid {
+      padding-right: 20px;
+      padding-left: 20px;
+      .splash-mid-content {
+        width: initial;
+      }
+    }
+    .splash-bottom {
+      padding-right: 20px;
+      padding-left: 20px;
+      h1 {
+        width: initial;
+      }
+      p {
+        width: initial;
+      }
+    }
+    .splash-teaser {
+      padding-right: 20px;
+      padding-left: 20px;
+      p {
+        width: initial;
+      }
+    }
     // dashboard
     .home-container {
       min-width: 0px;
@@ -312,6 +316,7 @@
         .standings-box {
           margin-top: 10px;
           width: 100%;
+          font-size: 20px;
         }
       }
     }
