--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -158,8 +158,8 @@
 
 .pool-standings {
   width: 870px;
-  min-height: 238px;
-  // height: 278px;
+//   min-height: 238px;
+//   height: 278px;
   padding: 20px 10px;
   display: -webkit-box;
   display: -ms-flexbox;
