footer faqs and pricing components added

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -31,6 +31,7 @@
 @import 'components/splash/_.scss';
 @import 'components/console/_.scss';
 @import 'components/profile/_.scss';
+@import 'components/faq/_.scss';
 /******************************/
 
 html {
