--- a/app/assets/stylesheets/base/websponsive.scss
+++ b/app/assets/stylesheets/base/websponsive.scss
@@ -12,6 +12,9 @@
     .app-container {
       padding-top: 100px;
     }
+    .footer {
+      font-size: 20px;
+    }
     // navbar
     .navbar-container {
       height: 100px;
