--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -1,63 +1,36 @@
-// .footer-container {
-//   min-height: 50px;
-//   width: 100%;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   font-size: 15px;
-//   color: $drk-text;
-//   background-color: $drk-primary;
-//   border-top: 15px solid $lt-primary;
-//   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-//   div {
-//     height: 35px;
-//     padding: 0px 40px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     font-weight: bold;
-//     background-color: $lt-primary;
-//     box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
-//   }
-
-// }
-
-.footer-container {
-  min-height: 50px;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 15px;
-  color: $drk-text;
-  background-color: $drk-primary;
-  border-top: 15px solid $lt-primary;
-  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-          box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-
-  div {
-    height: 35px;
-    padding: 0px 40px;
-    display: -webkit-box;
-    display: -ms-flexbox;
+.footer {
+    width: 100%;
+    padding: 20px 0px;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    font-weight: bold;
-    background-color: $lt-primary;
-    -webkit-box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
-            box-shadow: -8px 0px 5px -5px rgba(0,0,0,0.16), 8px 0px 5px -5px rgba(0,0,0,0.16);
-  }
-
+    flex-direction: column;
+    align-items: center;
+    .copyright {
+        display: flex;
+        justify-content: center;
+        i {
+            padding: 0px 2.5px;
+            padding-top: 2.5px;
+        }
+    }
+    .links {
+        display: flex;
+        flex-direction: column; 
+        align-items: center;
+        div {
+            padding-top: 10px;
+        }
+        .internals {
+            display: flex;
+            flex-direction: row;
+            div {
+                padding: 0px 5px;
+            }
+        }
+    }
+    .social {
+        padding-top: 10px;
+        i {
+            margin: 0px 10px;
+        }
+    }
 }
