--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -261,7 +261,7 @@
     text-align: center;
   }
   p {
-    // width: 870px;
+    width: 870px;
     text-align: center;
     font-size: 20px;
     line-height: 35px;
