--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -59,7 +59,8 @@
 @import "profile_box";
 
 .home-container {
-  min-height: 950px;
+//   min-height: 950px;
+//   min-height: 100%;
   width: 100%;
   min-width: 900px;
   display: -webkit-box;
