--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -181,6 +181,27 @@
     text-align: center;
     font-size: 20px;
     line-height: 35px;
+    margin-bottom: 25px;
+  }
+
+  .action-call {
+      width: 150px;
+      height: 40px;
+      border-radius: 2px;
+      font-size: 20px;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: white;
+      border: 1px black solid;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+      &:hover{
+          background: $drk-primary;
+          color: white; 
+          border: none;
+      }
   }
 }
 
