removed default values from auth forms

--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -47,6 +47,9 @@
         font-size: 20px;
         width: initial;
       }
+      .action-call {
+        height: 50px;
+      }
     }
     .splash-mid {
       padding-right: 20px;
