signed out navbar links

--- a/app/assets/stylesheets/components/common/_.scss
+++ b/app/assets/stylesheets/components/common/_.scss
@@ -146,14 +146,14 @@ _::-webkit-full-page-media, _:future, :root .safari_only {
   z-index: 10;
 }
 
-.submit-row {
-  width: 100%;
-  padding-left: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
-}
+// .submit-row {
+//   width: 100%;
+//   padding-left: 5px;
+//   display: -webkit-box;
+//   display: -ms-flexbox;
+//   display: flex;
+//   -webkit-box-pack: justify;
+//       -ms-flex-pack: justify;
+//           justify-content: space-between;
+//   position: relative;
+// }
