--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -14,6 +14,20 @@
     }
     .footer {
       font-size: 20px;
+      .internals {
+        font-size: 20px;
+      }
+    }
+    // auth 
+    .submit-row {
+      font-size: 20px;
+    }
+    .utility-row {
+      font-size: 20px;
+    }
+    .auth-form-button {
+      height: 50px;
+      font-size: 20px;
     }
     // navbar
     .navbar-container {
