--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -232,7 +232,7 @@
     }
     .auth-form-button {
       height: 30px;
-      width: 90px;
+      padding: 0px 15px;
       font-size: 15px;
     }
   }
