footer background and splash teaser padding

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -312,7 +312,8 @@
 
 .splash-teaser {
   width: 100%;
-  padding: 40px 0px;
+//   padding: 40px 0px;
+  padding-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
