--- a/app/assets/stylesheets/components/footer/_.scss
+++ b/app/assets/stylesheets/components/footer/_.scss
@@ -1,9 +1,11 @@
 .footer {
     width: 100%;
-    padding: 20px 0px;
+    padding: 30px 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: $drk-primary;
+    color: white;
     .copyright {
         display: flex;
         justify-content: center;
@@ -23,12 +25,12 @@
             display: flex;
             flex-direction: row;
             div {
-                padding: 0px 5px;
+                padding: 0px 2.5px;
             }
         }
     }
     .social {
-        padding-top: 10px;
+        padding-top: 20px;
         i {
             margin: 0px 10px;
         }
