--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -89,6 +89,10 @@
         width: initial;
       }
     }
+    // faq 
+    .faq {
+      font-size: 20px;
+    }
     // dashboard
     .home-container {
       min-width: 0px;
