signup form mobile sizing

--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -14,20 +14,31 @@
     }
     .footer {
       font-size: 20px;
-      .internals {
+      .internal-link {
         font-size: 20px;
       }
     }
     // auth 
-    .submit-row {
-      font-size: 20px;
+    .signup-container {
+    .auth-form {
+      width: 100%;
+      padding: 0px 40px;
+      .submit-row {
+        font-size: 20px;
+        .reroute {
+          font-size: 20px;
+        }
+      }
+      .utility-row {
+        a {
+        font-size: 20px;
+        }
+      }
+      .auth-form-button {
+        height: 50px;
+        font-size: 20px;
+      }
     }
-    .utility-row {
-      font-size: 20px;
-    }
-    .auth-form-button {
-      height: 50px;
-      font-size: 20px;
     }
     // navbar
     .navbar-container {
@@ -92,6 +103,9 @@
     // faq 
     .faq {
       font-size: 20px;
+      width: initial;
+      padding-left: 20px;
+      padding-right: 20px;
     }
     // dashboard
     .home-container {
