matched up web and mobile response docs

--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -14,8 +14,10 @@
     }
     .footer {
       font-size: 20px;
-      .internal-link {
-        font-size: 20px;
+      .links {
+        .internal-link {
+          font-size: 20px;
+        }
       }
     }
     // auth 
