--- a/app/assets/stylesheets/components/faq/_.scss
+++ b/app/assets/stylesheets/components/faq/_.scss
@@ -8,3 +8,15 @@
     }
   }
 }
+
+.pricing {
+  width: 870px;
+  padding: 10px 0px;
+  margin: auto;
+  .top-text {
+    margin-bottom: 10px;
+  }
+  .rates {
+    margin-bottom: 10px;
+  }
+}
