--- a/app/assets/stylesheets/base/responsive.scss
+++ b/app/assets/stylesheets/base/responsive.scss
@@ -109,6 +109,13 @@
       padding-left: 20px;
       padding-right: 20px;
     }
+    // pricing 
+    .pricing {
+      font-size: 20px;
+      width: initial;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
     // dashboard
     .home-container {
       min-width: 0px;
