pool list bottom padding

--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -110,7 +110,7 @@
 
 .home-bottom {
   width: 870px;
-  padding-top: 20px;
+  padding: 20px 0px;
   // min-height: 376px;
   display: -webkit-box;
   display: -ms-flexbox;
