--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -86,7 +86,7 @@
     }
 
     .modboard-item {
-      margin-bottom: 20px;
+      margin: 10px 0px;
       padding-left: 5px;
       display: -webkit-box;
       display: -ms-flexbox;
