removed min height from leaderboard

--- a/app/assets/stylesheets/components/leaderboard/_.scss
+++ b/app/assets/stylesheets/components/leaderboard/_.scss
@@ -146,7 +146,7 @@
 // }
 
 .leaderboard-container {
-  min-height: 1080px;
+  // min-height: 1080px;
   min-width: 870px;
   width: 95%;
   padding: 20px 0px;
