home top styling fix

--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -1,5 +1,6 @@
 .pool-list {
-  width: 579px;
+  width: 400px;
+  // width: 579px;
   // height: 225px;
   position: relative;
   // padding-bottom: 5px;
