logo added to navbar and dropdown styles

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -176,6 +176,13 @@
     font-weight: bold;
   }
 
+  .logo-container {
+    width: 300px;
+    height: 79px;
+    background: url(image_path('myonlinepool-logo.png'));
+    background-size: cover;
+  }
+
   p {
     width: 870px;
     text-align: center;
