--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -118,7 +118,7 @@ $transition-time: 0.1s;
 @import 'hamburger.scss';
 
 .navbar-container {
-  height: 60px;
+  height: 94px;
   width: 100%;
   position: fixed;
   top: 0px;
@@ -139,6 +139,18 @@ $transition-time: 0.1s;
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
           box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   z-index: 100;
+
+  .logo-container {
+    position: absolute;
+    left: 75px;
+    width: 300px;
+    height: 79px;
+    background: url(image_path('myonlinepool-logo.png'));
+    background-size: cover;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 
   .title {
     height: 100%;
@@ -226,31 +238,17 @@ $transition-time: 0.1s;
 }
 
 .navbar-dropdown {
-  padding-bottom: 10px;
+  padding: 10px 0px;
   color: black;
+  background: $mop-grey;
   z-index: 2;
   position: absolute;
-  background: #fff;
   -webkit-box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
           box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  opacity: 0;
-  top: 60px;
+  top: 94px;
   left: 0px;
   width: 220px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
 
-  -webkit-animation-name: slideIn;
-
-          animation-name: slideIn;
-  -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
-  -webkit-animation-timing-function: ease-out;
-          animation-timing-function: ease-out;
-  -webkit-animation-duration: $transition-time;
-          animation-duration: $transition-time;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
 }
 
 .navbar-dropdown-list {
@@ -273,6 +271,11 @@ $transition-time: 0.1s;
     transition: .5s;
     cursor: pointer;
     width: 100%;
+    border-bottom: 1px white solid;
+  }
+
+  a:last-child {
+    border-bottom: none;
   }
 
   a:hover, .remove-button:hover {
