week switcher size increase on mobile

--- a/app/assets/stylesheets/base/websponsive.scss
+++ b/app/assets/stylesheets/base/websponsive.scss
@@ -279,6 +279,12 @@
       }
       .picks-header {
         margin-right: 10px;
+        .week-switcher {
+          margin-left: 10px;
+          i {
+            transform: scale(2);
+          }
+        }
       }
       .selection-item {
         min-width: 100%;
