--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -104,6 +104,10 @@
 @import "chat_box";
 @import "bulletin_board";
 
+.loader-container {
+  margin: auto;
+}
+
 .pool-root {
 //   min-height: 950px;
   width: 100%;
