--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -190,6 +190,38 @@
             justify-content: space-between;
     position: relative;
 
+    .pool-picks-link {
+      height: 40px;
+      width: 135px;
+      font-size: 15px;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      border-radius: 2px;
+      -webkit-box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+              box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+      -webkit-transition: .3s;
+      -o-transition: .3s;
+      transition: .3s;
+      background: white;
+      color: black;
+      border: 1px $drk-primary solid;
+      i {
+        margin-right: 10px;
+      }
+    }
+    .pool-picks-link:hover {
+      color: white;
+      background: $drk-primary;
+    }  
+    
+
     .week-switcher {
       position: relative;
       padding-left: 20px;
