styles and logic for picksview

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 @import 'components/logos.scss';
+@import 'components/gifs.scss';
 @import 'components/common/_.scss';
 @import 'components/footer/_.scss';
 @import 'components/home/_.scss';
@@ -32,6 +33,7 @@
 @import 'components/console/_.scss';
 @import 'components/profile/_.scss';
 @import 'components/faq/_.scss';
+@import 'components/picksview/_.scss';
 /******************************/
 
 html {
