image route fix test

--- a/app/assets/stylesheets/components/gifs.scss
+++ b/app/assets/stylesheets/components/gifs.scss
@@ -1,11 +1,11 @@
 .gif-49ers {
-  background: url('./logos/49ers.gif')
+  background: url('./logos/49ers.png')
 }
 .gif-Bears {
-  background: url('./logos/Bears.gif')
+  background: url('Bears.gif')
 }
 .gif-Bengals {
-  background: url('./logos/Bengals.gif')
+  background: url('Bengals.png')
 }
 .gif-Bills {
   background: url('./logos/Bills.gif')
