--- a/app/assets/stylesheets/components/gifs.scss
+++ b/app/assets/stylesheets/components/gifs.scss
@@ -1,5 +1,5 @@
 .gif-49ers {
-  background: url('./logos/49ers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942380/49ers_gemmou.gif')
 }
 .gif-Bears {
   background: url('./logos/Bears.gif')
