full cloudinary shift

--- a/app/assets/stylesheets/components/gifs.scss
+++ b/app/assets/stylesheets/components/gifs.scss
@@ -2,95 +2,95 @@
   background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942380/49ers_gemmou.gif')
 }
 .gif-Bears {
-  background: url('./logos/Bears.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942400/Bears_qprza5.gif')
 }
 .gif-Bengals {
-  background: url('./logos/Bengals.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942467/Bengals_zjmfct.gif')
 }
 .gif-Bills {
-  background: url('./logos/Bills.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942472/Bills_m8oizo.gif')
 }
 .gif-Broncos {
-  background: url('./logos/Broncos.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942478/Broncos_xsnjuo.gif')
 }
 .gif-Browns {
-  background: url('./logos/Browns.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942488/Browns_rmht5p.gif')
 }
 .gif-Buccaneers {
-  background: url('./logos/Buccaneers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942493/Buccaneers_rrhrr2.gif')
 }
 .gif-Cardinals {
-  background: url('./logos/Cardinals.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942609/Cardinals_xydeos.gif')
 }
 .gif-Chargers {
-  background: url('./logos/Chargers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942619/Chargers_nwhtee.gif')
 }
 .gif-Chiefs {
-  background: url('./logos/Chiefs.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942631/Chiefs_ovu4ei.gif')
 }
 .gif-Colts {
-  background: url('./logos/Colts.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942635/Colts_xubkvz.gif')
 }
 .gif-Cowboys {
-  background: url('./logos/Cowboys.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942642/Cowboys_fh1wem.gif')
 }
 .gif-Dolphins {
-  background: url('./logos/Dolphins.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942647/Dolphins_gskxad.gif')
 }
 .gif-Eagles {
-  background: url('./logos/Eagles.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942657/Eagles_hu1pau.gif')
 }
 .gif-Falcons {
-  background: url('./logos/Falcons.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942664/Falcons_ovniix.gif')
 }
 .gif-Giants {
-  background: url('./logos/Giants.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942684/Giants_bzwpra.gif5')
 }
 .gif-Jaguars {
-  background: url('./logos/Jaguars.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942698/Jaguars_ky6rnj.gif')
 }
 .gif-Jets {
-  background: url('./logos/Jets.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942710/Jets_mkzzao.gif')
 }
 .gif-Lions {
-  background: url('./logos/Lions.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942751/Lions_jsebox.gif')
 }
 .gif-Packers {
-  background: url('./logos/Packers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942757/Packers_j2vn5u.gif')
 }
 .gif-Panthers {
-  background: url('./logos/Panthers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942775/Panthers_deg5wb.gif')
 }
 .gif-Patriots {
-  background: url('./logos/Patriots.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942788/Patriots_jm0o6u.gif')
 }
 .gif-Raiders {
-  background: url('./logos/Raiders.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942804/Raiders_sbqips.gif')
 }
 .gif-Rams {
-  background: url('./logos/Rams.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942810/Rams_r8katu.gif')
 }
 .gif-Ravens {
-  background: url('./logos/Ravens.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942820/Ravens_kivxxk.gif')
 }
 .gif-Redskins {
-  background: url('./logos/Redskins.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942826/Redskins_e8ho6g.gif')
 }
 .gif-Saints {
-  background: url('./logos/Saints.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942833/Saints_osm8gy.gif')
 }
 .gif-Seahawks {
-  background: url('./logos/Seahawks.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942846/Seahawks_djl53r.gif')
 }
 .gif-Steelers {
-  background: url('./logos/Steelers.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942856/Steelers_dovtbo.gif')
 }
 .gif-Texans {
-  background: url('./logos/Texans.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942862/Texans_egbiku.gif')
 }
 .gif-Titans {
-  background: url('./logos/Titans.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942870/Titans_oorhnq.gif')
 }
 .gif-Vikings {
-  background: url('./logos/Vikings.gif')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942875/Vikings_kjihqy.gif')
 }
