--- a/app/assets/stylesheets/components/gifs.scss
+++ b/app/assets/stylesheets/components/gifs.scss
@@ -44,7 +44,7 @@
   background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942664/Falcons_ovniix.gif')
 }
 .gif-Giants {
-  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942684/Giants_bzwpra.gif5')
+  background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942684/Giants_bzwpra.gif')
 }
 .gif-Jaguars {
   background: url('http://res.cloudinary.com/devwor0u0/image/upload/v1505942698/Jaguars_ky6rnj.gif')
